acomodo del ficha cliente
Cambios para nueva tarea y nuevo proyecto

--- a/assets/css/themes.css
+++ b/assets/css/themes.css
@@ -261,7 +261,7 @@ THEME FIRE
 }
 
 .themed-background-fire {
-    background-color: #e74c3c !important;
+    background-color: #56B537  !important;
 }
 
 .themed-color-dark-fire {
