--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4140,3 +4140,9 @@ only screen and (min-device-pixel-ratio: 1.5) {
     .block, .block.full {border: none !important; padding: 0 !important;}
     .block-title {margin: 0 0 20px !important;}
 }
+
+hr.style-four {
+    height: 6px;
+    border: 0;
+    box-shadow: inset 0 12px 12px -12px rgba(187, 187, 187, 0.81);
+}
