--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -907,6 +907,8 @@ a.sidebar-title:focus {
 
 .header-section {
     padding: 30px 10px;
+	margin-bottom: -50px;
+	margin-top: -30px;
 }
 
 .content-header,
