--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4177,3 +4177,11 @@ thead input {
 	border-radius: 4px;
 	font-size: 13px;
 }
+
+.label_oculto{
+color: transparent;
+font-size: 1px;
+padding: 0px;
+height: 0px;
+width: 0px;
+}
